testsuite/tests/misc/underived_abstract_node/test.out
test.py:15: error: AbstractNode is abstract and has no concrete subclass
Done
